<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="main_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="main_scores_app">SCORES APP</string>
    <string name="main_library_app">LIBRARY APP</string>
    <string name="main_xyz_reader">XYZ READER</string>
    <string name="main_build_it_bigger">BUILD IT BIGGER</string>
    <string name="main_capstone">CAPSTONE: MY OWN APP</string>
</resources>
