<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My Nanodegree Apps!"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:minWidth="200dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickSpotify"
                android:text="@string/main_spotify_streamer" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickScores"
                android:text="@string/main_scores_app" />

            <Button
                android:onClick="onClickLibrary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_library_app" />

            <Button
                android:onClick="onClickBuildBigger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_build_it_bigger" />

            <Button
                android:onClick="onClickXYZ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_xyz_reader" />

            <Button
                android:onClick="onClickCapstone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_capstone"
                android:theme="@style/AppTheme.ButtonRed" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>